add walltime annotation

--- a/network_enrichment_endpoints.ipynb
+++ b/network_enrichment_endpoints.ipynb
@@ -37,6 +37,7 @@
     "JS adjustments:\n",
     "- made failed intermediates be depicted as benzenes\n",
     "- adjust MCS timeout to 2 sec to reduce walltime (large scaffolds take > 10 minutes on my end)\n",
+    "- annotate plots with walltime (minutes)\n",
     "\"\"\""
    ]
   },
